--- a/assignments/detyra1/index.html
+++ b/assignments/detyra1/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-<title>Hello World.</title>
+
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World!</h1>
 </body>
 </html>
