--- a/assignments/detyra4/index.html
+++ b/assignments/detyra4/index.html
@@ -4,13 +4,13 @@
 </head>
 <body>
     <h1><b><i>Hibiscus flowers</i></b></h1>
-    <img src="images/hibi1.jpeg" alt="" width="300">
-    <img src="images/hibi2.jpeg" alt="" width="300">
-    <img src="images/hibi3.jpeg" alt="" width="300">
+    <img src="images/hibi1.jpeg" alt="Hibiscus" width="300">
+    <img src="images/hibi2.jpeg" alt="Hibiscus" width="300">
+    <img src="images/hibi3.jpeg" alt="Hibiscus" width="300">
     <br>
-    <img src="images/hibi1.jpeg" alt="" width="300">
+    <img src="images/hibi1.jpeg" alt="Hibiscus" width="300">
     <br>
-    <img src="images/hibi3.jpeg" alt="" width="300">
+    <img src="images/hibi3.jpeg" alt="Hibiscus" width="300">
 <p>In the pictures above, I've shown the kind of flowers named <b><i>Hibiscus</i></b>. Hibiscus flowers, with their vibrant colors and large, delicate petals, add a tropical charm to any garden. These stunning blooms not only enhance aesthetics but also offer health benefits, being rich in antioxidants and vitamin C. Often used in herbal teas, hibiscus is known for its potential to support heart health and lower blood pressure, making it a beautiful and beneficial addition to nature. </p>
 
 </body>
