--- a/assignments/detyra8/index.html
+++ b/assignments/detyra8/index.html
@@ -105,6 +105,9 @@
         </blockquote>
     </section>
 <hr>
+<video src="Travis Scott and Fortnite Present： Astronomical (Full Event Video).mp4" controls>Travis Scott's pandemic concert</video>
+<hr>
+<audio src="Metro Boomin  Only 1 Interlude with Travis Scott OFFICIAL AUDIO.mp3" controls>One of Travis Scott's collaborations.</audio>
     <footer>
         <p> 2024 Edrinë Shala</p>
         <address>
