--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Edrinë Shala - Projects</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
@@ -8,30 +9,37 @@
         <h1>Edrinë Shala</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="finalproject.html" target="_blank">Home &#127968;</a></li>
+                <li><a href="finalproject3.html" target="_blank">Contact &#128187;</a></li>
             </ul>
         </nav>
     </header>
+    <hr>
 
-    <section id="project1">
-        <h2>Project Title 1</h2>
-        <img src="project1-image.jpg" alt="Project 1 Image" width="300">
-        <p>Description of Project 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </section>
+    <section id="projects">
+        <h2>My favorite celebrity</h2>
+        <img src="images/Screenshot (2).png" alt="Project 1 Image" width="500"><br>
+        <img src="images/Screenshot (3).png" alt="Project 1 Image" width="500"><br>
+        <img src="images/Screenshot (4).png" alt="Project 1 Image" width="500"><br>
+        <img src="images/Screenshot (5).png" alt="Project 1 Image" width="500"><br>
+        <img src="images/Screenshot (6).png" alt="Project 1 Image" width="500">
+<hr>
 
-    <section id="project2">
-        <h2>Project Title 2</h2>
-        <img src="project2-image.jpg" alt="Project 2 Image" width="300">
-        <p>Description of Project 2: Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>I created this project about my favorite celebrity, Travis Scott, to explore his influence on music and culture. <br>
+            His unique sound and innovative style inspire me, and I wanted to showcase his journey and achievements. <br>
+             Through this project, I hope to share my admiration for his artistry and highlight how he has shaped the contemporary music scene.</p>
     </section>
-
-    <section id="project3">
-        <h2>Project Title 3</h2>
-        <img src="project3-image.jpg" alt="Project 3 Image" width="300">
-        <p>Description of Project 3: Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+<hr>
+    <section id="projects">
+        <h2>A local business</h2>
+        <img src="images/Screenshot (7).png" alt="Project 2 Image" width="500"><br>
+        <img src="images/Screenshot (8).png" alt="Project 2 Image" width="500">
+        <hr>
+        <p>I chose to create my project about Albi Mall to highlight its important role in our community. <br>
+            This shopping destination offers a variety of stores and dining options while serving as a gathering place for families and friends.<br>
+            By showcasing its unique features, I aim to encourage support for local businesses and demonstrate their impact on our local economy and social life.</p>
     </section>
+<hr>
 
     <footer>
         <p>2024 Edrinë Shala</p>
