--- a/projects/Final Project/finalproject3.html
+++ b/projects/Final Project/finalproject3.html
@@ -2,25 +2,23 @@
 <head>
 
     <title>Edrinë Shala - Contact</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-
+<hr>
     <header>
-        <h1>Your Name</h1>
+        <h1>Edrinë Shala</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="finalproject.html" target="_blank">Home &#127968;</a></li>
+                <li><a href="finalproject2.html" target="_blank">Projects &#128640;</a></li>
             </ul>
         </nav>
     </header>
-
+<hr>
     <section id="contact-form">
         <h2>Contact Me</h2>
-        <form action="#" method="post">
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br><br>
+        <form action="#">
             
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" required><br><br>
@@ -31,21 +29,26 @@
             <input type="submit" value="Send Message">
         </form>
     </section>
+    <hr>
 
     <section id="social-media">
-        <h2>Connect with Me</h2>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></li>
-            <li><a href="https://twitter.com/yourprofile" target="_blank">Twitter</a></li>
-            <li><a href="https://github.com/yourprofile" target="_blank">GitHub</a></li>
-            <li><a href="https://www.facebook.com/yourprofile" target="_blank">Facebook</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Your Name</p>
-        <p>Contact: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
+     
+     <footer>
+        <h3>Find me in these social medias</h3>
+            <ul>
+     <li><a href="https://www.facebook.com/edrina.shala?mibextid=LQQJ4d" target="_blank"> <img src="images/104498_facebook_icon.png" alt="" width="30"></a></li>
+     <li><a href="https://www.instagram.com/edrineshalaa_/profilecard/?igsh=NHU4bjVpbWJvOHpm" target="_blank"><img src="images/1161953_instagram_icon (1).png" alt="" width="30"></a></li>
+     <li><a href="https://github.com/edrinashala" target="_blank"><img src="images/211904_social_github_icon.png" alt="" width="30"></a></li>
+            </ul>   
     </footer>
+    </section>
+    <hr>
+    <section>
+        <footer>
+        <p> 2024 Edrinë Shala</p>
+        <p>Contact: <a href="edrinashala@hotmail.com">edrinashala@hotmail.com</a></p>
+    </footer>
+    </section>
 
 </body>
 </html>
