--- a/projects/Final Project/finalproject.html
+++ b/projects/Final Project/finalproject.html
@@ -7,7 +7,7 @@
     <body>
     <section>
         <header>
-            <h1>Edrinë Shala</h1>
+            <h1>Edrinë Shala - Portfolio</h1>
             <nav>
                 <ul>
                     <li><a href="finalproject2.html" target="_blank">Projects &#128640;</a></li>
