--- a/projects/Final Project/finalproject3.html
+++ b/projects/Final Project/finalproject3.html
@@ -7,7 +7,7 @@
 <body>
 <hr>
     <header>
-        <h1>Edrinë Shala</h1>
+        <h1>Edrinë Shala - Contact</h1>
         <nav>
             <ul>
                 <li><a href="finalproject.html" target="_blank">Home &#127968;</a></li>
