--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -42,7 +42,7 @@
 <hr>
 
     <footer>
-        <p>2024 Edrinë Shala</p>
+        <p>2024, Edrinë Shala</p>
         <p>Contact: <a href="edrinashala@hotmail.com">edrinashala@hotmail.com</a></p>
     </footer>
 
