--- a/projects/Final Project/finalproject.html
+++ b/projects/Final Project/finalproject.html
@@ -53,11 +53,11 @@
                 </tr>
                 <tr>
                     <th>Ratings</th>
-                    <td>8</td>
-                    <td>7</td>
-                    <td>9</td>
-                    <td>9.6</td>
-                    <td>10</td>
+                    <td align="center">8.0</td>
+                    <td align="center">7.0</td>
+                    <td align="center">9.0</td>
+                    <td align="center">9.6</td>
+                    <td align="center">10.0</td>
                 </tr>
 
             </table>
