--- a/projects/Final Project/finalproject.html
+++ b/projects/Final Project/finalproject.html
@@ -80,8 +80,7 @@
         </section>
     <hr>
         <footer>
-            <p>2024, Edrinë Shala</p>
-            <p>Contact: <a href="mailto:edrinashala@hotmail.com">edrinashala@hotmail.com</a></p>
+            <p>2024, Edrinë Shala &#169;</p>
         </footer>
     
     </body>
