--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -42,8 +42,8 @@
 <hr>
 
     <footer>
-        <p>2024, Edrinë Shala</p>
-        <p>Contact: <a href="edrinashala@hotmail.com">edrinashala@hotmail.com</a></p>
+        <p>2024, Edrinë Shala &#169;</p>
+
     </footer>
 
 </body>
