--- a/projects/Final Project/finalproject3.html
+++ b/projects/Final Project/finalproject3.html
@@ -44,8 +44,8 @@
     <hr>
     <section>
         <footer>
-        <p> 2024, Edrinë Shala</p>
-        <p>Contact: <a href="edrinashala@hotmail.com">edrinashala@hotmail.com</a></p>
+        <p> 2024, Edrinë Shala &#169;</p>
+     
     </footer>
     </section>
 
