--- a/projects/Final Project/finalproject.html
+++ b/projects/Final Project/finalproject.html
@@ -21,8 +21,8 @@
         <section id="about">
             <h2>About Me</h2>
             <img src="images/edrina.jpg" alt="A picture of me" width="200">
-            <p>My name is Edrina Shala, and I’m a 20-year-old mathematics student.<br>
-                 Born in Gjilan, Kosovo, I’m the oldest sibling in my family, which has shaped my sense of responsibility and leadership.<br>
+            <p>My name is <b>Edrinë Shala</b>, and I’m a 20-year-old <i>mathematics</i> student.<br>
+                 Born in <u>Gjilan, Kosovo</u>, I’m the oldest sibling in my family, which has shaped my sense of responsibility and leadership.<br>
                   My passion for mathematics drives my academic pursuits and challenges me to think critically and analytically. 
                   <br>I enjoy exploring the intricacies of the subject and applying it to real-world problems, and I’m excited about what the future holds for me in this field.</p>
         </section>
