--- a/projects/Final Project/finalproject.html
+++ b/projects/Final Project/finalproject.html
@@ -34,8 +34,8 @@
                     <ul><li>Selami Hallaci, Gjilan</li></ul></li>
                 <li><b>High School</b>
                     <ul><li>Gymnasium of Natural Sciences, Xhavit Ahmeti, Gjilan</li></ul></li>
-                <li><b>Bachelor of Mathematics</b>
-                    <ul><li>FSHMN, University of Prishtina, II</li></ul></li>
+                <li><b>University</b>
+                    <ul><li>Bachelor of mathematics,FSHMN, University of Prishtina, II</li></ul></li>
             </ul>
         </section>
     <hr>
