--- a/projects/Final Project/finalproject.html
+++ b/projects/Final Project/finalproject.html
@@ -68,11 +68,11 @@
             <p>Here are some of the projects I’ve worked on in this HTML course:</p>
             <ol>
                 <li>
-                    My favorite celebrity - I made this project about Travis Scott/ my favorite artist.
+                    My favorite celebrity:
                     <a href="file:///C:/Users/W11/Documents/future-minds-academy/assignments/detyra8/index.html" target="_blank"> &#8594;Read More</a>
                 </li>
                 <li>
-                    A local business - I made this project to support our local businessses in my case: A shopping mall.
+                    A local business:
                     <a href="file:///C:/Users/W11/Documents/future-minds-academy/assignments/detyra10/index.html" target="_blank">&#8594;Read More</a>
                 </li>
     
