--- a/assignments/detyra10/index.html
+++ b/assignments/detyra10/index.html
@@ -69,6 +69,8 @@
 <a href="https://www.albimall.com" target="_blank"><img src="images/172473_globe_global_internet_icon.png" alt="" width="30"></a>
 </section>
 <hr>
+<a href="file:///C:/Users/W11/Documents/future-minds-academy/projects/Final%20Project/finalproject.html">Go Back &#8592;</a>
+<hr>
 <section>
     2024 Edrinë Shala. All rights reserved!
 </section>
