--- a/assignments/detyra8/index.html
+++ b/assignments/detyra8/index.html
@@ -107,8 +107,13 @@
 <hr>
 <video src="Travis Scott and Fortnite Present： Astronomical (Full Event Video).mp4" controls>Travis Scott's pandemic concert</video>
 <hr>
-<audio src="Metro Boomin  Only 1 Interlude with Travis Scott OFFICIAL AUDIO.mp3" controls>One of Travis Scott's collaborations.</audio>
-    <footer>
+<audio src="Metro Boomin  Only 1 Interlude with Travis Scott OFFICIAL AUDIO.mp3" controls>One of Travis Scott's collaborations.</audio><br>
+<hr>
+<section>
+<a href="file:///C:/Users/W11/Documents/future-minds-academy/projects/Final%20Project/finalproject.html">Go Back &#8592;</a>    
+</section>
+<hr>
+<footer>
         <p> 2024 Edrinë Shala</p>
         <address>
             Contact: <a href="mailto:support@travisscott.eu.com">support@travisscott.eu.com</a>
