--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -17,7 +17,8 @@
     <hr>
 
     <section id="projects">
-        <h2>My favorite celebrity</h2>
+        <h2>Project 1</h2>
+        <h3>My favorite celebrity</h3>
         <img src="images/Screenshot (2).png" alt="Project 1 Image" width="500"><br>
         <img src="images/Screenshot (3).png" alt="Project 1 Image" width="500"><br>
         <img src="images/Screenshot (4).png" alt="Project 1 Image" width="500"><br>
@@ -31,7 +32,8 @@
     </section>
 <hr>
     <section id="projects">
-        <h2>A local business</h2>
+        <h2>Project 2</h2>
+        <h3>A local business</h3>
         <img src="images/Screenshot (7).png" alt="Project 2 Image" width="500"><br>
         <img src="images/Screenshot (8).png" alt="Project 2 Image" width="500">
         <hr>
