--- a/projects/Final Project/finalproject.html
+++ b/projects/Final Project/finalproject.html
@@ -1,13 +1,13 @@
 
     <!DOCTYPE html>
     <head>
-        <title>Edrina Shala- Portfolio</title>
+        <title>Edrinë Shala - Portfolio</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
     <section>
         <header>
-            <h1>Edrinë Shala - Portfolio</h1>
+            <h1>Personal Portfolio</h1>
             <nav>
                 <ul>
                     <li><a href="finalproject2.html" target="_blank">Projects &#128640;</a></li>
@@ -19,7 +19,7 @@
     <hr>
     
         <section id="about">
-            <h2>About Me</h2>
+            <h2>Who is <u>Edrinë Shala?</u></h2>
             <img src="images/edrina.jpg" alt="A picture of me" width="200">
             <p>My name is <b>Edrinë Shala</b>, and I’m a 20-year-old <i>mathematics</i> student.<br>
                  Born in <u>Gjilan, Kosovo</u>, I’m the oldest sibling in my family, which has shaped my sense of responsibility and leadership.<br>
@@ -32,8 +32,7 @@
             <ul>
                 <li><b>Elementary and Middle School</b> 
                     <ul><li>Selami Hallaci, Gjilan</li></ul></li>
-                <li><b>High School</b>
-                    <ul><li>Gymnasium of Natural Sciences, Xhavit Ahmeti, Gjilan</li></ul></li>
+                <li><b>High School</b>- Gymnasium of Natural Sciences, Xhavit Ahmeti, Gjilan</li>
                 <li><b>University</b>
                     <ul><li>Bachelor of mathematics,FSHMN, University of Prishtina, II</li></ul></li>
             </ul>
