--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -19,11 +19,11 @@
     <section id="projects">
         <h2>Project 1</h2>
         <h3>My favorite celebrity</h3>
-        <img src="images/Screenshot (2).png" alt="Project 1 Image" width="500"><br>
-        <img src="images/Screenshot (3).png" alt="Project 1 Image" width="500"><br>
-        <img src="images/Screenshot (4).png" alt="Project 1 Image" width="500"><br>
-        <img src="images/Screenshot (5).png" alt="Project 1 Image" width="500"><br>
-        <img src="images/Screenshot (6).png" alt="Project 1 Image" width="500">
+        <figure><img src="images/Screenshot (2).png" alt="Project 1 Image" width="500"></figure><br>
+        <figure><img src="images/Screenshot (3).png" alt="Project 1 Image" width="500"></figure><br>
+        <figure><img src="images/Screenshot (4).png" alt="Project 1 Image" width="500"></figure><br>
+        <figure><img src="images/Screenshot (5).png" alt="Project 1 Image" width="500"></figure><br>
+        <figure><img src="images/Screenshot (6).png" alt="Project 1 Image" width="500"></figure>
 <hr>
 
         <p>I created this project about my favorite celebrity, Travis Scott, to explore his influence on music and culture. <br>
@@ -34,8 +34,8 @@
     <section id="projects">
         <h2>Project 2</h2>
         <h3>A local business</h3>
-        <img src="images/Screenshot (7).png" alt="Project 2 Image" width="500"><br>
-        <img src="images/Screenshot (8).png" alt="Project 2 Image" width="500">
+        <figure><img src="images/Screenshot (7).png" alt="Project 2 Image" width="500"></figure><br>
+        <figure><img src="images/Screenshot (8).png" alt="Project 2 Image" width="500"></figure>
         <hr>
         <p>I chose to create my project about Albi Mall to highlight its important role in our community. <br>
             This shopping destination offers a variety of stores and dining options while serving as a gathering place for families and friends.<br>
