--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -6,7 +6,7 @@
 <body>
 
     <header>
-        <h1>Edrinë Shala- Projects</h1>
+        <h1>My Projects</h1>
         <nav>
             <ul>
                 <li><a href="finalproject.html" target="_blank">Home &#127968;</a></li>
