--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
 <head>
     <title>Edrinë Shala - Projects</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
 
     <header>
@@ -24,13 +26,16 @@
         <figure><img src="images/Screenshot (4).png" alt="Project 1 Image" width="500"></figure><br>
         <figure><img src="images/Screenshot (5).png" alt="Project 1 Image" width="500"></figure><br>
         <figure><img src="images/Screenshot (6).png" alt="Project 1 Image" width="500"></figure>
-<hr>
+        <hr>
 
-        <p>I created this project about my favorite celebrity, Travis Scott, to explore his influence on music and culture. <br>
-            His unique sound and innovative style inspire me, and I wanted to showcase his journey and achievements. <br>
-             Through this project, I hope to share my admiration for his artistry and highlight how he has shaped the contemporary music scene.</p>
+        <p>I created this project about my favorite celebrity, Travis Scott, to explore his influence on music and
+            culture. <br>
+            His unique sound and innovative style inspire me, and I wanted to showcase his journey and achievements.
+            <br>
+            Through this project, I hope to share my admiration for his artistry and highlight how he has shaped the
+            contemporary music scene.</p>
     </section>
-<hr>
+    <hr>
     <section id="projects">
         <h2>Project 2</h2>
         <h3>A local business</h3>
@@ -38,10 +43,12 @@
         <figure><img src="images/Screenshot (8).png" alt="Project 2 Image" width="500"></figure>
         <hr>
         <p>I chose to create my project about Albi Mall to highlight its important role in our community. <br>
-            This shopping destination offers a variety of stores and dining options while serving as a gathering place for families and friends.<br>
-            By showcasing its unique features, I aim to encourage support for local businesses and demonstrate their impact on our local economy and social life.</p>
+            This shopping destination offers a variety of stores and dining options while serving as a gathering place
+            for families and friends.<br>
+            By showcasing its unique features, I aim to encourage support for local businesses and demonstrate their
+            impact on our local economy and social life.</p>
     </section>
-<hr>
+    <hr>
 
     <footer>
         <p>2024, Edrinë Shala &#169;</p>
@@ -49,4 +56,5 @@
     </footer>
 
 </body>
+
 </html>
