--- a/assignments/detyra3/index.html
+++ b/assignments/detyra3/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>My first website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My first website</title>
 </head>
+
 <body>
     <h1>Edrina Shala</h1>
-    <p>I'm Edrina Shala and I come from <b>Gjilan, Kosovo</b> where I grew up my whole life. Except the last two years that I've been living in Prishtina also, cause of my studies. I study <i>mathematics</i> in University of Prishtina.</p>
-    <p>You can find me in social medias such as <a href="https://www.facebook.com/edrina.shala?mibextid=LQQJ4d" target="_blank">Facebook</a> and <a href="https://www.instagram.com/edrineshalaa_/profilecard/?igsh=NHU4bjVpbWJvOHpm" target="_blank">Instagram</a> 
- </p>
- <p><i>My goals:</i></p>
- <ul>
-    <li>Finish my Bachelor's degree, then start my Master's degree.</li>
-    <li>Find a job so I can help my family, then maybe, hopefully, start my own business.</li>
-    <li>Buy a house, lands and my dream car.</li>
-    <li>Make enough money so I can travel all around the world.</li>
-    <li>Live a long healthy life.</li>
- </ul>
- 
-<p><i>My favorite movies:</i></p>
-<ol>
-<li>Charlie and the chocolate factory;</li>
-<li>Set it up;</li>
-<li>Hitch.</li>
-</ol>
-<footer>
-    <p>E-mail me at:
-        <a href="mailto:edrinashala@hotmail.com?subject=Subject%20Here&body=Body%20Here">edrinashala@hotmail.com</a>
+    <p>I'm Edrina Shala and I come from <b>Gjilan, Kosovo</b> where I grew up my whole life. Except the last two years
+        that I've been living in Prishtina also, cause of my studies. I study <i>mathematics</i> in University of
+        Prishtina.</p>
+    <p>You can find me in social medias such as <a href="https://www.facebook.com/edrina.shala?mibextid=LQQJ4d"
+            target="_blank">Facebook</a> and <a
+            href="https://www.instagram.com/edrineshalaa_/profilecard/?igsh=NHU4bjVpbWJvOHpm"
+            target="_blank">Instagram</a>
     </p>
-</footer>
+    <p><i>My goals:</i></p>
+    <ul>
+        <li>Finish my Bachelor's degree, then start my Master's degree.</li>
+        <li>Find a job so I can help my family, then maybe, hopefully, start my own business.</li>
+        <li>Buy a house, lands and my dream car.</li>
+        <li>Make enough money so I can travel all around the world.</li>
+        <li>Live a long healthy life.</li>
+    </ul>
+
+    <p><i>My favorite movies:</i></p>
+    <ol>
+        <li>Charlie and the chocolate factory;</li>
+        <li>Set it up;</li>
+        <li>Hitch.</li>
+    </ol>
+    <footer>
+        <p>E-mail me at:
+            <a href="mailto:edrinashala@hotmail.com?subject=Subject%20Here&body=Body%20Here">edrinashala@hotmail.com</a>
+        </p>
+    </footer>
 </body>
 
 </html>
