--- a/assignments/detyra5/index.html
+++ b/assignments/detyra5/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
 <body>
     <h2>Table 1- Multiplication table</h2>
     <table border="1" cellspacing="5" width="50%">
