--- a/assignments/detyra10/index.html
+++ b/assignments/detyra10/index.html
@@ -1,80 +1,108 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+
 <body>
-<b><i><u><h1 align="center">Mall Mania: Your Ultimate Shopping Adventure Awaits!</h1></u></i></b> 
-<p align="center">Welcome to Albi Mall: Your ultimate shopping destination! Explore a diverse range of stores, from trendy fashion boutiques to popular brand outlets.<br>
-     Enjoy a delightful dining experience at our food court, featuring a variety of cuisines to satisfy every craving. <br>With family-friendly entertainment options, relaxing lounges, and seasonal events, Albi Mall offers something for <br> Whether you're looking for the latest styles, unique gifts, or a day of fun, come discover all that Albi Mall has to offer!</p>   
-<center><img src="images/albi-mall-gjilan.jpeg" alt="" width=500">
-</center>
-<hr>
-<section>
-    <table>
-<tr>
-    <td><center><img src="images/foodcourt.jpeg.png" alt="" width="100"></center>
-    </td>
-    <td>
-       <center> <img src="images/fashion.jpeg.png" alt="" width="100"></center>
-    </td>
-    <td>
-      <center><img src="images/playground.jpeg.png" alt="" width="100"></center>
-    </td>
-</tr>
-<tr>
-    <th><h2><b><i>Culinary Delights:<br> Taste the World at Our Food Court!</i></b></h2></th>
-    <th><h2><b><i>Explore a World of Fashion Under One Roof!</i></b></h2></th>
-    <th><h2><b><i>Family-Friendly Fun for Everyone!</i></b></h2></th>
-</tr>
-<tr>
-    <td align="center">Enjoy a diverse selection of international cuisines and local favorites, catering to all tastes and dietary needs.</td>
-    <td align="center">Discover the latest trends and timeless styles from a wide variety of retailers, making it easy to refresh your wardrobe all in one place.</td>
-    <td align="center"> Enjoy play areas, kid-friendly events, and family-oriented promotions that make shopping a fun and engaging experience for all ages.</td>
-</tr>
-    </table>
-</section>
-<hr>
-<section>
-    <h2 align="center"><i>Contact info</i></h2>
-    <table align="center" width="50%">
-    <tr>
-    <td width="30%">
-        <h4>Location</h4>
-        <p>
-            Kosova
-            Rr. Marie Shllaku, Gjilan, Kosova 60000
-        </p>
-    </td>
-    <td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23546.34607336654!2d21.466316799999998!3d42.4640512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1354f3fab7938f89%3A0x9c7bbd61d9f7099d!2sAlbi%20Mall!5e0!3m2!1sen!2s!4v1727386809182!5m2!1sen!2s" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
-    </tr>
-    <tr>
-        <td><b>Name:</b></td>
-    <td>Edrinë Shala</td>
-    </tr>
-    <tr>
-        <td><b>E-mail:</b></td>
-        <td>edrinashala@hotmail.com</td>
-    </tr>
-    <tr>
-        <td><b>Phone number:</b></td>
-        <td>044-313-288</td>
-    </tr>
-    </table>
-</section>
-<hr>
-<section>
-    <footer>
-<a href="https://www.facebook.com/albimallgjilan" target="_blank"> <img src="images/2959749_facebook_icon.png" alt="" width="30"></a>
-<a href="https://www.instagram.com/albimallgjilan/" target="_blank"><img src="images/1161953_instagram_icon.png" alt="" width="30"></a>
-<a href="https://www.albimall.com" target="_blank"><img src="images/172473_globe_global_internet_icon.png" alt="" width="30"></a>
-</section>
-<hr>
-<a href="file:///C:/Users/W11/Documents/future-minds-academy/projects/Final%20Project/finalproject.html">Go Back &#8592;</a>
-<hr>
-<section>
-    2024 Edrinë Shala. All rights reserved!
-</section>
-</footer>
+    <b><i><u>
+                <h1 align="center">Mall Mania: Your Ultimate Shopping Adventure Awaits!</h1>
+            </u></i></b>
+    <p align="center">Welcome to Albi Mall: Your ultimate shopping destination! Explore a diverse range of stores, from
+        trendy fashion boutiques to popular brand outlets.<br>
+        Enjoy a delightful dining experience at our food court, featuring a variety of cuisines to satisfy every
+        craving. <br>With family-friendly entertainment options, relaxing lounges, and seasonal events, Albi Mall offers
+        something for <br> Whether you're looking for the latest styles, unique gifts, or a day of fun, come discover
+        all that Albi Mall has to offer!</p>
+    <center><img src="images/albi-mall-gjilan.jpeg" alt="" width=500">
+    </center>
+    <hr>
+    <section>
+        <table>
+            <tr>
+                <td>
+                    <center><img src="images/foodcourt.jpeg.png" alt="" width="100"></center>
+                </td>
+                <td>
+                    <center> <img src="images/fashion.jpeg.png" alt="" width="100"></center>
+                </td>
+                <td>
+                    <center><img src="images/playground.jpeg.png" alt="" width="100"></center>
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <h2><b><i>Culinary Delights:<br> Taste the World at Our Food Court!</i></b></h2>
+                </th>
+                <th>
+                    <h2><b><i>Explore a World of Fashion Under One Roof!</i></b></h2>
+                </th>
+                <th>
+                    <h2><b><i>Family-Friendly Fun for Everyone!</i></b></h2>
+                </th>
+            </tr>
+            <tr>
+                <td align="center">Enjoy a diverse selection of international cuisines and local favorites, catering to
+                    all tastes and dietary needs.</td>
+                <td align="center">Discover the latest trends and timeless styles from a wide variety of retailers,
+                    making it easy to refresh your wardrobe all in one place.</td>
+                <td align="center"> Enjoy play areas, kid-friendly events, and family-oriented promotions that make
+                    shopping a fun and engaging experience for all ages.</td>
+            </tr>
+        </table>
+    </section>
+    <hr>
+    <section>
+        <h2 align="center"><i>Contact info</i></h2>
+        <table align="center" width="50%">
+            <tr>
+                <td width="30%">
+                    <h4>Location</h4>
+                    <p>
+                        Kosova
+                        Rr. Marie Shllaku, Gjilan, Kosova 60000
+                    </p>
+                </td>
+                <td><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d23546.34607336654!2d21.466316799999998!3d42.4640512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1354f3fab7938f89%3A0x9c7bbd61d9f7099d!2sAlbi%20Mall!5e0!3m2!1sen!2s!4v1727386809182!5m2!1sen!2s"
+                        width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+            </tr>
+            <tr>
+                <td><b>Name:</b></td>
+                <td>Edrinë Shala</td>
+            </tr>
+            <tr>
+                <td><b>E-mail:</b></td>
+                <td>edrinashala@hotmail.com</td>
+            </tr>
+            <tr>
+                <td><b>Phone number:</b></td>
+                <td>044-313-288</td>
+            </tr>
+        </table>
+    </section>
+    <hr>
+    <section>
+        <footer>
+            <a href="https://www.facebook.com/albimallgjilan" target="_blank"> <img
+                    src="images/2959749_facebook_icon.png" alt="" width="30"></a>
+            <a href="https://www.instagram.com/albimallgjilan/" target="_blank"><img
+                    src="images/1161953_instagram_icon.png" alt="" width="30"></a>
+            <a href="https://www.albimall.com" target="_blank"><img src="images/172473_globe_global_internet_icon.png"
+                    alt="" width="30"></a>
+    </section>
+    <hr>
+    <a href="file:///C:/Users/W11/Documents/future-minds-academy/projects/Final%20Project/finalproject.html">Go Back
+        &#8592;</a>
+    <hr>
+    <section>
+        2024 Edrinë Shala. All rights reserved!
+    </section>
+    </footer>
 </body>
 
 </html>
