--- a/assignments/detyra7/index.html
+++ b/assignments/detyra7/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Log In</title>
 </head>
+
 <body>
     <h1>Log In</h1>
     <form>
@@ -11,6 +17,8 @@
         <br>
         <button type="submit">Log In</button>
     </form>
-    <a href="file:///C:/Users/W11/Documents/future-minds-academy/assignments/detyra7/index1.html" target="_blank">Don't have an account? Create one here</a>
+    <a href="file:///C:/Users/W11/Documents/future-minds-academy/assignments/detyra7/index1.html" target="_blank">Don't
+        have an account? Create one here</a>
 </body>
+
 </html>
