--- a/assignments/detyra8/index.html
+++ b/assignments/detyra8/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>My favorite celebrity</title>
 </head>
+
 <body>
 
     <header>
@@ -9,22 +15,25 @@
         <hr>
         <img src="images/travisscott.jpg" width="500" alt="Travis Scott">
         <hr>
-            <ul>
-                <li><a href="#bio" title="Learn about Travis Scott's biography">Biography</a></li>
-                <li><a href="#discography" title="Explore Travis Scott's discography">Discography</a></li>
-                <li><a href="#collaborations" title="View collaborations with other artists">Collaborations</a></li>
-                <li><a href="#awards" title="See awards and achievements">Awards</a></li>
-                <li><a href="#poll" title="Vote for your favorite album">Favorite Album Poll</a></li>
-                <li><a href="#quotes" title="Read notable quotes from Travis Scott">Quotes</a></li>
-            </ul>
+        <ul>
+            <li><a href="#bio" title="Learn about Travis Scott's biography">Biography</a></li>
+            <li><a href="#discography" title="Explore Travis Scott's discography">Discography</a></li>
+            <li><a href="#collaborations" title="View collaborations with other artists">Collaborations</a></li>
+            <li><a href="#awards" title="See awards and achievements">Awards</a></li>
+            <li><a href="#poll" title="Vote for your favorite album">Favorite Album Poll</a></li>
+            <li><a href="#quotes" title="Read notable quotes from Travis Scott">Quotes</a></li>
+        </ul>
     </header>
-<hr>
+    <hr>
     <section id="bio">
         <h2>Biography</h2>
-        <p>Travis Scott, born Jacques Webster II on April 30, 1992, in Houston, Texas, is a prominent American rapper, singer, and songwriter. Influenced by artists like Kid Cudi and Kanye West, he rose to fame with his unique sound that blends hip-hop, trap, and psychedelic music.</p>
-        <p>After releasing his first mixtape, <strong>"Owl Pharaoh"</strong>, in 2013, he gained significant attention and has since become one of the most influential figures in contemporary hip-hop.</p>
+        <p>Travis Scott, born Jacques Webster II on April 30, 1992, in Houston, Texas, is a prominent American rapper,
+            singer, and songwriter. Influenced by artists like Kid Cudi and Kanye West, he rose to fame with his unique
+            sound that blends hip-hop, trap, and psychedelic music.</p>
+        <p>After releasing his first mixtape, <strong>"Owl Pharaoh"</strong>, in 2013, he gained significant attention
+            and has since become one of the most influential figures in contemporary hip-hop.</p>
     </section>
-<hr>
+    <hr>
     <section id="discography">
         <h2>Discography</h2>
         <table border="1" cellpadding="5" cellspacing="0">
@@ -56,7 +65,7 @@
             </tr>
         </table>
     </section>
-<hr>
+    <hr>
     <section id="collaborations">
         <h2>Honorable Collaborations</h2>
         <ul>
@@ -67,7 +76,7 @@
             <li>Kid Cudi - "Baptized in Fire"</li>
         </ul>
     </section>
-<hr>
+    <hr>
     <section id="awards">
         <h2>Awards and Achievements</h2>
         <ul>
@@ -90,7 +99,8 @@
     </section>
     <hr>
     <section>
-<p>Down below we have a picture of his most recent concert in Rio De Janeiro, where more than 115,000 people attended it.</p>
+        <p>Down below we have a picture of his most recent concert in Rio De Janeiro, where more than 115,000 people
+            attended it.</p>
         <img src="images/concert.jpeg.jpg" width="400" alt="Concert">
 
     </section>
@@ -98,26 +108,32 @@
     <section id="quotes">
         <h2>Worth-mentioning Quotes</h2>
         <blockquote cite="https://www.goodreads.com/quotes/tag/travis-scott">
-            <p>"I think the best way to describe my music is to say that it's a blend of everything that has inspired me." - Travis Scott</p>
+            <p>"I think the best way to describe my music is to say that it's a blend of everything that has inspired
+                me." - Travis Scott</p>
         </blockquote>
         <blockquote>
-            <p>"I want to make music that makes people feel good and make them think the unthinkable." - Travis Scott</p>
+            <p>"I want to make music that makes people feel good and make them think the unthinkable." - Travis Scott
+            </p>
         </blockquote>
     </section>
-<hr>
-<video src="Travis Scott and Fortnite Present： Astronomical (Full Event Video).mp4" controls>Travis Scott's pandemic concert</video>
-<hr>
-<audio src="Metro Boomin  Only 1 Interlude with Travis Scott OFFICIAL AUDIO.mp3" controls>One of Travis Scott's collaborations.</audio><br>
-<hr>
-<section>
-<a href="file:///C:/Users/W11/Documents/future-minds-academy/projects/Final%20Project/finalproject.html">Go Back &#8592;</a>    
-</section>
-<hr>
-<footer>
+    <hr>
+    <video src="Travis Scott and Fortnite Present： Astronomical (Full Event Video).mp4" controls>Travis Scott's pandemic
+        concert</video>
+    <hr>
+    <audio src="Metro Boomin  Only 1 Interlude with Travis Scott OFFICIAL AUDIO.mp3" controls>One of Travis Scott's
+        collaborations.</audio><br>
+    <hr>
+    <section>
+        <a href="file:///C:/Users/W11/Documents/future-minds-academy/projects/Final%20Project/finalproject.html">Go Back
+            &#8592;</a>
+    </section>
+    <hr>
+    <footer>
         <p> 2024 Edrinë Shala</p>
         <address>
             Contact: <a href="mailto:support@travisscott.eu.com">support@travisscott.eu.com</a>
         </address>
     </footer>
 </body>
+
 </html>
