--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Edrinë Shala - Projects</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -33,7 +37,8 @@
             His unique sound and innovative style inspire me, and I wanted to showcase his journey and achievements.
             <br>
             Through this project, I hope to share my admiration for his artistry and highlight how he has shaped the
-            contemporary music scene.</p>
+            contemporary music scene.
+        </p>
     </section>
     <hr>
     <section id="projects">
