--- a/assignments/detyra2/index.html
+++ b/assignments/detyra2/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-    <b><i><a href="https://youtube.com">Youtube</a></i></b>
+    <b>
+        <i>
+            <a href="https://youtube.com">Youtube</a>
+        </i>
+    </b>
 </body>
 
 </html>
