--- a/projects/Final Project/finalproject2.html
+++ b/projects/Final Project/finalproject2.html
@@ -23,7 +23,7 @@
     <hr>
 
     <section id="projects">
-        <h2>Project 1</h2>
+        <h2 id="celebrity">Project 1</h2>
         <h3>My favorite celebrity</h3>
         <figure><img src="images/Screenshot (2).png" alt="Project 1 Image" width="500"></figure><br>
         <figure><img src="images/Screenshot (3).png" alt="Project 1 Image" width="500"></figure><br>
@@ -42,7 +42,7 @@
     </section>
     <hr>
     <section id="projects">
-        <h2>Project 2</h2>
+        <h2 id="albimall">Project 2</h2>
         <h3>A local business</h3>
         <figure><img src="images/Screenshot (7).png" alt="Project 2 Image" width="500"></figure><br>
         <figure><img src="images/Screenshot (8).png" alt="Project 2 Image" width="500"></figure>
