--- a/projects/Final Project/finalproject.html
+++ b/projects/Final Project/finalproject.html
@@ -83,12 +83,12 @@
         <ol>
             <li>
                 My favorite celebrity:
-                <a href="file:///C:/Users/W11/Documents/future-minds-academy/assignments/detyra8/index.html"
+                <a href="file:///C:/Users/W11/Documents/future-minds-academy/projects/Final%20Project/finalproject2.html#celebrity"
                     target="_blank"> &#8594;Read More</a>
             </li>
             <li>
                 A local business:
-                <a href="file:///C:/Users/W11/Documents/future-minds-academy/assignments/detyra10/index.html"
+                <a href="file:///C:/Users/W11/Documents/future-minds-academy/projects/Final%20Project/finalproject2.html#albimall"
                     target="_blank">&#8594;Read More</a>
             </li>
 
