--- a/assignments/css/homework16/index.html
+++ b/assignments/css/homework16/index.html
@@ -25,7 +25,7 @@
 
     <section id="about">
         <h2>Who is <u>Edrinë Shala?</u></h2>
-        <figure><img src="images/edrina.jpg" alt="A picture of me" width="200"></figure>
+        <figure><img class="img" src="5402435_account_profile_user_avatar_man_icon.png" alt="A picture of me" width="200"></figure>
         <p>My name is <b>Edrinë Shala</b>, and I’m a 20-year-old <i>mathematics</i> student.<br>
             Born in <u>Gjilan, Kosovo</u>, I’m the oldest sibling in my family, which has shaped my sense of
             responsibility and leadership.<br>
@@ -43,8 +43,12 @@
                 <ul>
                     <li>Selami Hallaci, Gjilan</li>
                 </ul>
-            </li>
-            <li><b>High School</b>- Gymnasium of Natural Sciences, Xhavit Ahmeti, Gjilan</li>
+            </li> 
+            <li><b>High School</b> 
+        <ul> 
+            <li>Gymnasium of Natural Sciences, Xhavit Ahmeti, Gjilan</li>
+                </ul>
+            
             <li><b>University</b>
                 <ul>
                     <li>Bachelor of mathematics,FSHMN, University of Prishtina, II</li>
